Fixed post-image-below-header for post-image-aligned-left

--- a/src/css/frontend/blog.css
+++ b/src/css/frontend/blog.css
@@ -6,6 +6,7 @@
 	border-style: solid;
 	border-width: 1px;
 	padding-bottom: 0;
+	position: relative;
 	cursor: pointer;
 	transition: color 0.1s ease-in-out;
 }
@@ -63,6 +64,15 @@
 
 	.crdm-modern-excerpt .wp-post-image {
 		height: 100%;
+	}
+}
+
+@media (min-width: 769px) {
+
+	.post-image-below-header.post-image-aligned-left article:not(.generate-columns) .inside-article.crdm-modern-excerpt .post-image {
+		margin-top: 0;
+		position: absolute;
+		top: 0;
 	}
 }
 
